<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary"
        android:textSize="36dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/txtTitle"/>


    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/spinFood"
        android:text="@string/choose_your_food" />

    <Spinner
        android:id="@+id/spinFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="20dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:onClick="donOnClick"
        android:text="@string/done" />
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/spinFood"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/healtyicon"/>



</RelativeLayout>