<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <LinearLayout
        android:id="@+id/linearNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@android:color/white"
            android:minHeight="48dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="SpeakableTextPresentCheck"
            android:onClick="btnBackOnClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/add_food"
            android:layout_marginTop="35dp"

            />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNameContent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/linearNav"
        />

    <TextView
        android:id="@+id/txtNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNameContent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/number" />

    <EditText
        android:id="@+id/edtNum"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNameContent"

        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@id/txtNameContent"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_below="@id/linearNav"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@id/edtNum"
        android:onClick="btnDoneOnClick"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/imgContent"
        android:layout_below="@id/txtNum"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        />


    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgContent"
        android:layout_marginTop="35dp"/>
</RelativeLayout>